<resources>
    <string name="app_name">TodoAPP</string>

    <!--Ошибки в полях ввода-->
    <string name="error_password">The password must be at least 8 characters long</string>
    <string name="error_email">The mail must contain at least 7 characters and a at (@)</string>
    <string name="error_confirmpassword">Repeat the password!!!</string>
    <string name="error_name">Fields should not be empty</string>

    <!--Поля ввода данных пользователя-->
    <string name="user_email">Enter your email</string>
    <string name="user_password">Enter password</string>
    <string name="user_name">Enter your full name</string>
    <string name="user_confirmpassword">Confirm password</string>


    <!--Строки GetStarted Activity-->
    <string name="getstarted_greeting">Let’s get things done on time</string>
    <string name="getstarted_greeting2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tellus praesent purus tincidunt ut cursus vitae. Nisl, vitae nulla lectus tortor, est a aliquam. Pretium netus</string>
    <string name="getstarted_button">Get Started</string>

    <!--Строки Login Activity -->
    <string name="login_greeting">Welcome Back!</string>
    <string name="login_forgot">Forgot Password</string>
    <string name="login_button">Sign In</string>
    <string name="login_account">Don’t have an account?</string>
    <string name="login_signup">Sign Up</string>

    <!--Строки Register Activity-->
    <string name="register_greeting">Welcome Onboard!</string>
    <string name="register_greeting2">We help you meet up you tasks on time.</string>
    <string name="register_button">Register</string>
    <string name="register_account">Already have an account?</string>
    <string name="register_signin">Sign In</string>

    <!--Строки Tasks Fragment-->
    <string name="tasksfragment_text">TasksList</string>
    <string name="tasks">Daily Tasks</string>

    <!--Строки Bottom Navigation Profile-->
    <string name="profile_profile">Profile</string>
    <string name="profile_tasks">Tasks</string>

    <!--Строки задач-->
    <string name="task1">Learn Javascript by 11am</string>
    <string name="task2">Edit Youtube video by 1pm</string>
    <string name="task3">Have Lunch by 2pm</string>
    <string name="task4">Visit parents at 4pm</string>
    <string name="task5">Research on UI Designs</string>
    <string name="task6">Read books by 10pm</string>

    <!--Строки Profile Fragment-->
    <string name="profile_name">Welcome %s!</string>

    <!--Строки Categories Fragment-->
    <string name="category_work">Work</string>
    <string name="category_study">Study</string>
    <string name="category_entertainments">Еntertainment</string>
</resources>