<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasksfragment_text"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="30dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            android:layout_gravity="end"
            android:layout_margin="30dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task1"
                    android:buttonTint="@color/yellow_button" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task2"
                    android:buttonTint="@color/yellow_button" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task3"
                    android:buttonTint="@color/yellow_button" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task4"
                    android:buttonTint="@color/yellow_button" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task5"
                    android:buttonTint="@color/yellow_button" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task6"
                    android:buttonTint="@color/yellow_button" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</FrameLayout>